# manygit

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
manygit/: __init__.py  connections.py  exceptions.py  github.py  gitlab.py  types.py  utils.py
requirements/: dev.in  dev.txt  prod.in  prod.txt
tests/: conftest.py  shared.py  test_github.py  test_gitlab.py
tests/cassettes/test_github/: test_commit_statuses.yaml  test_commits.yaml  test_create_release.yaml  test_create_tag.yaml  test_merge_branches.yaml  test_pull_request.yaml  test_pull_requests.yaml  test_releases.yaml  test_set_commit_status.yaml  test_tags.yaml
tests/cassettes/test_gitlab/: test_commit_statuses.yaml  test_commits.yaml  test_create_pull_request.yaml  test_create_release.yaml  test_create_tag.yaml  test_merge_branches.yaml  test_pull_requests.yaml  test_releases.yaml  test_set_commit_status.yaml  test_tags.yaml
