[project]
requires-python=">=3.9"
name="manygit"


[project.optional_dependencies]
github = ["github3.py"]
gitlab = ["python-gitlab"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '^/(\.|dist|pybuild|venv)'

[tool.pyright]
typeCheckingMode = 'basic'

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
